fix ui-style for btn

--- a/demo-webshop-ui/src/app/product/product-item/product-item.component.html
+++ b/demo-webshop-ui/src/app/product/product-item/product-item.component.html
@@ -57,6 +57,6 @@
       </fieldset>
     </fieldset>
 
-    <p class="mb-3 p-2"><button type="button" class="btn-dark" [disabled]="!productForm.valid"  (click)="submitForm()">Buy Product</button></p>
+    <p class="mb-3 p-2"><button type="button" class="btn btn-dark" [disabled]="!productForm.valid"  (click)="submitForm()">Buy Product</button></p>
   </form>
 </div>
